* Fat Zebra: Add scrubbing to Fat Zebra gateway [bruno] #2037
* Monei: Add US and CA as new supported countries [davidgf] #2209
* NAB Transact: Add scrubbing to NAB Transact [bruno] #2038
* iATS: Add scrubbing support to iATS [bruno] #2228
* Stripe: Ensure ECI values for tokenized cards are padded [jasonwebster] #2250
* Forte: Fix incorrect authorization_code response mapping [davidsantoso]

== Version 1.61.0 (November 7, 2016)
* Add codes AQ, BQ, SX, and SS to list of countries and update SD numeric code [zxlin]
* AuthorizeNet: Update supported countries list [shasum]
* Barclay SmartPay: Add support for credit [shasum]
* Barclaycard SmartPay: Update supported countries [shasum]
* BluePay: Add Canada to supported countries list [shasum]
* BlueSnap: Update countries list [shasum]
* Braintree Blue: Add Android Pay support [mrezentes]
* Braintree Blue: Add remote test to verify card token [shasum]
* Braintree Blue: Get Android Pay tx id from payment method, not options [mrezentes]
* CardStream: Add MXN currency code [curiousepic]
* CardStream: Set captureDelay to zero on purchase [davidsantoso]
* CitrusPay: Add gateway [duff]
* CitrusPay: Update URL to current API version [davidsantoso]
* Clearhaus: Fix refund of captures [duff]
* Clearhaus: Update list of non fractal currencies [curiousepic]
* Clearhaus: Use localized amount [curiouspic]
* Conekta: Add void action [MauricioMurga]
* Credorax: Add gateway support [davidsantoso]
* CyberSource, Paymill, Payflow: Add verify_credentials [duff]
* CyberSource: Combine auth_reversal with Void [curiousepic]
* CyberSource: Increase merchant defined data fields [davidsantoso]
* CyberSource: Look up alpha2 country code [curiousepic]
* CyberSource: Use localized_amount [curiousepic]
* Element: Pass order_id and shipping address [curiousepic]
* Fat Zebra: Add cavv, xid, and sli fields [curiousepic]
* Fat Zebra: Fix improper descriptor nesting [curiousepic]
* Find countries if they are differently cased [curiousepic]